TRUNK-5328 Add Altitude and Accuracy fields and language compatibility

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1278,6 +1278,8 @@ Location.postalCode=Postal Code
 Location.country=Country
 Location.latitude=Latitude
 Location.longitude=Longitude
+Location.altitude=Altitude
+Location.accuracy=Accuracy
 Location.saved=Location saved
 Location.deleted=Location deleted
 Location.missing=Matata! I was unable to find any locations.
@@ -1858,6 +1860,8 @@ PersonAddress.country=Country
 PersonAddress.postalCode=Postal Code
 PersonAddress.latitude=Latitude
 PersonAddress.longitude=Longitude
+PersonAddress.altitude=Altitude
+PersonAddress.accuracy=Accuracy
 PersonAddress.city=City
 PersonAddress.village=Village
 PersonAddress.state=State
