--- a/api/src/main/resources/messages_ar.properties
+++ b/api/src/main/resources/messages_ar.properties
@@ -1259,8 +1259,10 @@ Location.address1=العنوان
 # Location.province=Province
 # Location.postalCode=Postal Code
 # Location.country=Country
-# Location.latitude=Latitude
-# Location.longitude=Longitude
+Location.latitude=خط العرض
+Location.longitude=خط الطول
+Location.altitude=ارتفاع
+Location.accuracy=دقة
 # Location.saved=Location saved
 # Location.deleted=Location deleted
 # Location.missing=Matata\! I was unable to find any locations.
@@ -1830,15 +1832,16 @@ PersonName.familyName=اسم العائلة
 # PersonName.degree=Degree
 # PersonName.prefix=Prefix
 
-
 PersonAddress.address1=العنوان
 # PersonAddress.address2=Address 2
 # PersonAddress.cityVillage=City/Village
 # PersonAddress.stateProvince=State/Province
 # PersonAddress.country=Country
 # PersonAddress.postalCode=Postal Code
-# PersonAddress.latitude=Latitude
-# PersonAddress.longitude=Longitude
+PersonAddress.latitude=خط العرض
+PersonAddress.longitude=خط الطول
+PersonAddress.altitude=ارتفاع
+PersonAddress.accuracy=دقة
 # PersonAddress.city=City
 # PersonAddress.village=Village
 # PersonAddress.state=State
