--- a/api/src/main/resources/messages_de.properties
+++ b/api/src/main/resources/messages_de.properties
@@ -1250,6 +1250,8 @@ Location.postalCode=Postleitzahl
 Location.country=Land
 Location.latitude=Breitengrad
 Location.longitude=Längengrad
+Location.altitude=Flughöhe
+Location.accuracy=Genauigkeit
 Location.saved=Standort gespeichert
 Location.deleted=Standort gelöscht
 Location.missing=Es konnten keine Orte gefunden werden
@@ -1828,6 +1830,8 @@ PersonAddress.country=Land
 PersonAddress.postalCode=Postleitzahl
 PersonAddress.latitude=Breitengrad
 PersonAddress.longitude=Längengrad
+PersonAddress.altitude=Flughöhe
+PersonAddress.accuracy=Genauigkeit
 PersonAddress.city=Stadt
 PersonAddress.village=Ortschaft
 PersonAddress.state=Staat
