--- a/api/src/main/resources/messages_el.properties
+++ b/api/src/main/resources/messages_el.properties
@@ -1261,6 +1261,8 @@ Location.postalCode=Ταχ. κώδικας
 Location.country=Χώρα
 # Location.latitude=Latitude
 # Location.longitude=Longitude
+Location.altitude=ύψος
+Location.accuracy=ακρίβεια
 Location.saved=Η τοποθεσία αποθηκεύτηκε
 Location.deleted=Η τοποθεσία διεγράφει
 # Location.missing=Matata\! I was unable to find any locations.
@@ -1839,6 +1841,8 @@ PersonAddress.country=Χώρα
 PersonAddress.postalCode=Ταχ. κώδικας
 # PersonAddress.latitude=Latitude
 # PersonAddress.longitude=Longitude
+PersonAddress.altitude=ύψος
+PersonAddress.accuracy=ακρίβεια
 PersonAddress.city=Πόλη
 PersonAddress.village=Οικισμός
 PersonAddress.state=Πολιτεία
