--- a/api/src/main/resources/messages_es.properties
+++ b/api/src/main/resources/messages_es.properties
@@ -1356,6 +1356,8 @@ Location.latitude=Latitud
 Location.list.title=Localidades Actuales
 Location.location=Localidad
 Location.longitude=Longitud
+Location.altitude=Altitud
+Location.accuracy=Exactitud
 Location.manage.title=Administración de Localidad
 Location.manage=Administrar Localidades 
 Location.missing=Matata! No puedo encontrar algúna Localidad.
@@ -1999,6 +2001,8 @@ PersonAddress.error.startDateInFuture = La fecha de inicio para la dirección de
 PersonAddress.isActive = Es activo
 PersonAddress.latitude=Latitud
 PersonAddress.longitude=Longitud
+PersonAddress.altitude=Altitud
+PersonAddress.accuracy=Exactitud
 PersonAddress.postalCode=Código Postal
 PersonAddress.province=Provincia
 PersonAddress.startDate = Fecha de inicio
