--- a/api/src/main/resources/messages_fa.properties
+++ b/api/src/main/resources/messages_fa.properties
@@ -900,8 +900,10 @@ Location.state=استان
 Location.province=استان
 Location.postalCode=کدپستی
 Location.country=کشور
-Location.latitude=Latitude
-Location.longitude=Longitude
+Location.latitude=عرض جغرافیایی
+Location.longitude=طول جغرافیایی
+Location.altitude=ارتفاع
+Location.accuracy=دقت
 Location.saved=مکان ذخیره شد
 Location.deleted=مکان حذف شد
 Location.missing=مکانی یافت نشد!
@@ -1316,8 +1318,10 @@ PersonAddress.cityVillage=شهر/روستا
 PersonAddress.stateProvince=استان
 PersonAddress.country=کشور
 PersonAddress.postalCode=کد پستی
-PersonAddress.latitude=Latitude
-PersonAddress.longitude=Longitude
+PersonAddress.latitude=عرض جغرافیایی
+PersonAddress.longitude=طول جغرافیایی
+PersonAddress.altitude=ارتفاع
+PersonAddress.accuracy=دقت
 PersonAddress.city=شهر
 PersonAddress.village=روستا
 PersonAddress.state=استان
