--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -266,6 +266,8 @@ PersonAddress.cityVillage=Ville
 PersonAddress.stateProvince=Etat/Province
 PersonAddress.country=Pays
 PersonAddress.postalCode=Code Postal
+PersonAddress.altitude=L'altitude
+PersonAddress.accuracy=Précision
 
 PatientIdentifier.title.endUser=Numero(s) d'identification
 PatientIdentifier.identifier=Numero d'identification
@@ -368,6 +370,8 @@ Location.cityVillage=Ville
 Location.stateProvince=Etat/Commune
 Location.postalCode=Code postal
 Location.country=Pays
+Location.altitude=L'altitude
+Location.accuracy=Précision
 
 Encounter.header=Rencontres
 Encounter.manage=Gérer rencontre
