--- a/api/src/main/resources/messages_hi.properties
+++ b/api/src/main/resources/messages_hi.properties
@@ -1204,8 +1204,10 @@ Location.state=राज्य
 Location.province=प्रांत
 Location.postalCode=पोस्टल कोड
 Location.country=देश
-Location.latitude अक्षांश=
-Location.longitude देशांतर=
+Location.latitude=अक्षांश
+Location.longitude=देशांतर
+Location.altitude=ऊंचाई
+Location.accuracy=शुद्धता
 Location.saved=स्थान बचाया
 Location.deleted=स्थान नष्ट कर दिया
 Location.missing=किसी स्थान को खोजने में असमर्थ था.
@@ -1715,6 +1717,8 @@ PersonAddress.country=देश
 PersonAddress.postalCode=पोस्टल कोड
 PersonAddress.latitude=अक्षांश
 PersonAddress.longitude=देशांतर
+PersonAddress.altitude=ऊंचाई
+PersonAddress.accuracy=शुद्धता
 PersonAddress.city=शहर
 PersonAddress.village=ग्राम
 PersonAddress.state=राज्य
