--- a/api/src/main/resources/messages_ht.properties
+++ b/api/src/main/resources/messages_ht.properties
@@ -1261,6 +1261,8 @@ Location.cityVillage=Vil/Vilaj
 # Location.country=Country
 # Location.latitude=Latitude
 # Location.longitude=Longitude
+Location.altitude=Hauteur
+Location.accuracy=Presizyon
 # Location.saved=Location saved
 # Location.deleted=Location deleted
 # Location.missing=Matata\! I was unable to find any locations.
@@ -1839,6 +1841,8 @@ PersonAddress.cityVillage=Vil/Vilaj
 # PersonAddress.postalCode=Postal Code
 # PersonAddress.latitude=Latitude
 # PersonAddress.longitude=Longitude
+PersonAddress.altitude=Hauteur
+PersonAddress.accuracy=Presizyon
 # PersonAddress.city=City
 # PersonAddress.village=Village
 # PersonAddress.state=State
