--- a/api/src/main/resources/messages_id_ID.properties
+++ b/api/src/main/resources/messages_id_ID.properties
@@ -1261,6 +1261,8 @@ Location.cityVillage=Kota / Kabupaten
 # Location.country=Country
 # Location.latitude=Latitude
 # Location.longitude=Longitude
+# Location.altitude=Altitude
+# Location.accuracy=Accuracy
 # Location.saved=Location saved
 # Location.deleted=Location deleted
 # Location.missing=Matata\! I was unable to find any locations.
