--- a/api/src/main/resources/messages_in_ID.properties
+++ b/api/src/main/resources/messages_in_ID.properties
@@ -1085,6 +1085,8 @@ Location.postalCode=Kode Pos
 Location.country=Negara
 Location.latitude=Garis Lintang
 Location.longitude=Garis Bujur
+Location.altitude=Altitudo
+Location.accuracy=Akurasi
 Location.saved=Lokasi tersimpan
 Location.deleted=Lokasi terhapus
 Location.missing=Astaga! Saya tidak dapat menemukan satu lokasipun.
@@ -1560,6 +1562,8 @@ PersonAddress.country=Negara
 PersonAddress.postalCode=Kode Pos
 PersonAddress.latitude=Lintang
 PersonAddress.longitude=Bujur
+PersonAddress.altitude=Altitudo
+PersonAddress.accuracy=Akurasi
 PersonAddress.city=City
 PersonAddress.village=Desa
 PersonAddress.state=Negara Bagian
