--- a/api/src/main/resources/messages_it.properties
+++ b/api/src/main/resources/messages_it.properties
@@ -644,6 +644,8 @@ Location.postalCode=CAP
 Location.country=Paese
 Location.latitude=Latitudine
 Location.longitude=Longitudine
+Location.altitude=Altitudine
+Location.accuracy=Precisione
 Location.saved=Località salvata
 Location.deleted=Località cancellata
 Location.missing=Ops! Non riesco a trovare nessuna Località.
@@ -932,6 +934,8 @@ PersonAddress.country=Paese
 PersonAddress.postalCode=Codice Postale
 PersonAddress.latitude=Latitudine
 PersonAddress.longitude=Longitudine
+PersonAddress.altitude=Altitudine
+PersonAddress.accuracy=Precisione
 PersonAddress.city=Citta'
 PersonAddress.village=Villaggio
 PersonAddress.state=Stato
