--- a/api/src/main/resources/messages_kh.properties
+++ b/api/src/main/resources/messages_kh.properties
@@ -781,6 +781,8 @@ Location.postalCode=ស្រុក/ខ័ណ្ឌ/ក្រុង
 Location.country=ឃុំ/សង្កាត់
 Location.latitude=ខេត្ត/រាជធានី
 Location.longitude=ប្រទេស
+Location.altitude=នីវូ
+Location.accuracy=ភាពត្រឹមត្រូវ
 Location.saved=ទីកន្លែងត្រូវបានរក្សាទុក
 Location.deleted=ទីកន្លែងត្រូវបានលុប
 Location.missing=Matata!ខ្ញុំមិនអាចរកទីកន្លែងបាន
@@ -1140,6 +1142,8 @@ PersonAddress.country= ប្រទេស
 PersonAddress.postalCode= លេខប្រីសន័យ
 PersonAddress.latitude= រយៈទទឺង
 PersonAddress.longitude= រយៈបណ្តោយ
+PersonAddress.altitude=នីវូ
+PersonAddress.accuracy=ភាពត្រឹមត្រូវ
 PersonAddress.city= ទីក្រុង
 PersonAddress.village=ភូមិ
 PersonAddress.state= ប្រទេស
