--- a/api/src/main/resources/messages_pt.properties
+++ b/api/src/main/resources/messages_pt.properties
@@ -1076,6 +1076,8 @@ Location.postalCode=Código Postal
 Location.country=País
 Location.latitude=Latitude
 Location.longitude=Longitude
+Location.altitude=Altitude
+Location.accuracy=Precisão
 Location.saved=Localizaçăo gravada
 Location.deleted=Localizaçăo apagada
 Location.missing=Matata! Năo foi possível encontrar nenhuma localizaçăo
@@ -1541,6 +1543,8 @@ PersonAddress.country=Pais
 PersonAddress.postalCode=Caixa Postal
 PersonAddress.latitude=Latitude
 PersonAddress.longitude=Longitude
+PersonAddress.altitude=Altitude
+PersonAddress.accuracy=Precisão
 PersonAddress.city=Cidade
 PersonAddress.village=Vila
 PersonAddress.state=Estado
