--- a/api/src/main/resources/messages_ru.properties
+++ b/api/src/main/resources/messages_ru.properties
@@ -1246,6 +1246,8 @@ Location.postalCode=Почтовый код
 Location.country=Страна
 Location.latitude=Широта
 Location.longitude=Долгота
+Location.altitude=высота
+Location.accuracy=точность
 Location.saved=Локация сохранена
 Location.deleted=Локация удалена
 Location.missing=Опаньки! Не удалось найти какие-либо локации.
@@ -1824,6 +1826,8 @@ PersonAddress.country=Страна
 PersonAddress.postalCode=Почтовый индекс
 PersonAddress.latitude=Широта
 PersonAddress.longitude=Долгота
+PersonAddress.altitude=высота
+PersonAddress.accuracy=точность
 PersonAddress.city=Город
 PersonAddress.village=Деревня
 PersonAddress.state=Штат
