--- a/api/src/main/resources/messages_zh_CN.properties
+++ b/api/src/main/resources/messages_zh_CN.properties
@@ -1150,6 +1150,8 @@ Location.postalCode =邮政编码
 Location.country =国家
 Location.latitude =纬度
 Location.longitude =经度
+Location.altitude =高度
+Location.accuracy =准确性
 Location.saved =保存位置
 Location.deleted =位置删除
 Location.missing =啊！我无法找到任何位置。
@@ -1647,6 +1649,8 @@ PersonAddress.country =国家
 PersonAddress.postalCode =邮政编码
 PersonAddress.latitude =纬度
 PersonAddress.longitude =经度
+PersonAddress.altitude =高度
+PersonAddress.accuracy =准确性
 PersonAddress.city =城市
 PersonAddress.village =村
 PersonAddress.state =国家
