--- a/api/src/main/resources/messages_ku.properties
+++ b/api/src/main/resources/messages_ku.properties
@@ -1261,6 +1261,8 @@ conceptAnswer.forConcept=
 # Location.country=Country
 # Location.latitude=Latitude
 # Location.longitude=Longitude
+Location.altitude=Bilindayî
+Location.accuracy=Tamî
 # Location.saved=Location saved
 # Location.deleted=Location deleted
 # Location.missing=Matata\! I was unable to find any locations.
@@ -1839,6 +1841,8 @@ conceptAnswer.forConcept=
 # PersonAddress.postalCode=Postal Code
 # PersonAddress.latitude=Latitude
 # PersonAddress.longitude=Longitude
+PersonAddress.altitude=Bilindayî
+PersonAddress.accuracy=Tamî
 # PersonAddress.city=City
 # PersonAddress.village=Village
 # PersonAddress.state=State
