--- a/api/src/main/resources/messages_lt.properties
+++ b/api/src/main/resources/messages_lt.properties
@@ -1261,6 +1261,8 @@ Location.address2=Adresas 2
 # Location.country=Country
 # Location.latitude=Latitude
 # Location.longitude=Longitude
+Location.altitude=Aukštis
+Location.accuracy=Tikslumas
 # Location.saved=Location saved
 # Location.deleted=Location deleted
 # Location.missing=Matata\! I was unable to find any locations.
@@ -1839,6 +1841,8 @@ PersonAddress.address2=Adresas 2
 # PersonAddress.postalCode=Postal Code
 # PersonAddress.latitude=Latitude
 # PersonAddress.longitude=Longitude
+PersonAddress.altitude=Aukštis
+PersonAddress.accuracy=Tikslumas
 # PersonAddress.city=City
 # PersonAddress.village=Village
 # PersonAddress.state=State
