--- a/api/src/main/resources/messages_si.properties
+++ b/api/src/main/resources/messages_si.properties
@@ -2636,6 +2636,8 @@ Location.country=රට
 Location.latitude=අක්ශාංෂ
 #Location.longitude=Longitude
 Location.longitude=දේශාංෂ
+Location.altitude=උන්නතාංශය
+Location.accuracy=නිරවද්‍යතාව
 #Location.saved=Location saved
 Location.saved=ස්ථානය ආරක්ෂා කිරීම
 #Location.deleted=Location deleted
@@ -3223,6 +3225,10 @@ PersonAddress.country=Country
 PersonAddress.postalCode=Postal Code
 PersonAddress.latitude=Latitude
 PersonAddress.longitude=Longitude
+PersonAddress.altitude=Altitude
+PersonAddress.accuracy=Accuracy
+PersonAddress.altitude=උන්නතාංශය
+PersonAddress.accuracy=නිරවද්‍යතාව
 PersonAddress.city=City
 PersonAddress.village=Village
 PersonAddress.state=State
