--- a/api/src/main/resources/messages_sw.properties
+++ b/api/src/main/resources/messages_sw.properties
@@ -1261,6 +1261,8 @@ Form.resource.name=Jina
 # Location.country=Country
 # Location.latitude=Latitude
 # Location.longitude=Longitude
+Location.altitude=Urefu
+Location.accuracy=Usahihi
 # Location.saved=Location saved
 # Location.deleted=Location deleted
 # Location.missing=Matata\! I was unable to find any locations.
@@ -1839,6 +1841,8 @@ PersonName.familyName=Jina la ukoo
 # PersonAddress.postalCode=Postal Code
 # PersonAddress.latitude=Latitude
 # PersonAddress.longitude=Longitude
+PersonAddress.altitude=Urefu
+PersonAddress.accuracy=Usahihi
 # PersonAddress.city=City
 # PersonAddress.village=Village
 # PersonAddress.state=State
